# advent-of-code

./: .gitignore  README.md  pyproject.toml
src/create_day/: create_day.py
src/create_day/markdown_converter/: markdown.md
src/create_day/templates/: template.py  test.py
src/puzzles/2015/Day 1/: Outline.md  not_quite_lisp.py  test_not_quite_lisp.py
src/puzzles/2015/Day 2/: Outline.md  i_was_told_there_would_be_no_math.py  test_i_was_told_there_would_be_no_math.py
src/puzzles/2015/Day 3/: Outline.md  perfectly_spherical_houses_in_a_vacuum.py  test_perfectly_spherical_houses_in_a_vacuum.py
src/puzzles/2015/Day 4/: Outline.md  test_the_ideal_stocking_stuffer.py  the_ideal_stocking_stuffer.py
src/puzzles/2015/Day 5/: Outline.md  doesnt_he_have_internelves_for_this.py  pytest.ini  test_doesnt_he_have_internelves_for_this.py
src/puzzles/2023/Day 1/: Outline.md  input.in  test_trebuchet.py  trebuchet.py
