[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "1.2"
authors = [
    {name = "Alex C Warren", email = "alexcwarren.info@gmail.com"}
]
description = "Creat folders and files to work on Advent of Code puzzles."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bs4",
    "markdownify",
    "requests",
    "pytest",
    "ratelimit"
]